--- a/about.html
+++ b/about.html
@@ -38,26 +38,16 @@
 
 <body>
 
-<!-- ===============
- HEADER SECTION START
- ================== -->
-    <section class="header-area">
-        <div class="container">
-            <h1>Our Creativity Begins Where Reality Ends</h1>
-        </div>
-    </section>
- <!-- ====================
-  HEADER SECTION END
-  ================ -->
+
     <!-- ===================
-     HERO SECTION STRAT
+     ABOUT MAIN SECTION STRAT
      ======================== -->
-    <section class="hero-section">
+    <section class="about-main-section">
         <div class="container">
             <div class="row about-sect">
                 <div class="col-xl-5 col-lg-6 col-md-12 col-12">
                     <div class="abt-img">
-                        <img src="/img/about-page/comic.png" alt="">
+                        <img src="/img/about/comic.png" alt="">
                     </div>
                 </div>
                 <div class="col-xl-7 col-lg-6 col-md-12 col-12">
@@ -108,56 +98,68 @@
     </section>
 
     <!-- ==========================
-            HERO SECTION END
+            ABOUT MAIN SECTION END
     ========================== -->
 
     <!-- ==================
      HISTORY SECTION START
      ====================== -->
     <section class="history-area">
-        <div class="container">
+        <div class="container history-head">
             <h2>HISTORY</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem sint dolorem sed nihil atque tempora
                 commodi eligendi, exercitationem, dicta totam sequi ab culpa repellendus nesciunt fugiat</p>
         </div>
         <hr>
-        <div class="container">
-            <div class="special-slider">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="special-slider">
 
-                <!-- Swiper -->
-                <div class="swiper history">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <img src="/img/about-page/history/inauguration of a it office in 3D style.jpg" alt="">
-                            <h6>inauguration</h6>
-                            <p>2021</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="/img/about-page/history/Event video shooting at dubai in 3d image.jpg" alt="">
-                            <h6>Global presence</h6>
-                            <p>2022</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="/img/about-page/history/Event video shooting at dubai in 3d image.jpg" alt="">
-                            <h6>Dubai is just amazing</h6>
-                            <p>2023</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="/img/about-page/history/3d animation work in computer.jpg" alt="">
-                            <h6>3D product animation</h6>
-                            <p>2024</p>
-                        </div>
-                        <div class="swiper-slide">
-                            <img src="/img/about-page/history/Global notability showing in a 3d globe.jpg" alt="">
-                            <h6>Global notability</h6>
-                            <p>2025</p>
+                    <!-- Swiper -->
+                    <div class="swiper history">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/inauguration of a it office in 3D style.jpg" alt="">
+                                <h6>inauguration</h6>
+                                <p>2021</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/Event video shooting at dubai in 3d image.jpg" alt="">
+                                <h6>Global presence</h6>
+                                <p>2022</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/Event video shooting at dubai in 3d image.jpg" alt="">
+                                <h6>Dubai is just amazing</h6>
+                                <p>2023</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/3d animation work in computer.jpg" alt="">
+                                <h6>3D product animation</h6>
+                                <p>2024</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/Global notability showing in a 3d globe.jpg" alt="">
+                                <h6>Global notability</h6>
+                                <p>2025</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/Global notability showing in a 3d globe.jpg" alt="">
+                                <h6>Global notability</h6>
+                                <p>2025</p>
+                            </div>
+                            <div class="swiper-slide">
+                                <img src="/img/about/history/Global notability showing in a 3d globe.jpg" alt="">
+                                <h6>Global notability</h6>
+                                <p>2025</p>
+                            </div>
+
                         </div>
 
                     </div>
 
+                    <!-- Swiper JS -->
                 </div>
-
-                <!-- Swiper JS -->
             </div>
         </div>
 
@@ -178,32 +180,32 @@
             <div class="row align-items-center team-member">
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/gokul.jpg" alt="">
+                        <img src="/img/about/team/gokul.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/basil.jpg" alt="">
+                        <img src="/img/about/team/basil.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/iyas.jpg" alt="">
+                        <img src="/img/about/team/iyas.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/anu.jpg" alt="">
+                        <img src="/img/about/team/anu.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/sreerag.jpg" alt="">
+                        <img src="/img/about/team/sreerag.jpg" alt="">
                     </div>
                 </div>
                 <div class="col-xl-4 col-lg-4 col-md-4 col-12">
                     <div class="teams">
-                        <img src="/img/about-page/team/hadi.jpg" alt="">
+                        <img src="/img/about/team/hadi.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -217,7 +219,7 @@
   ========================== -->
     <section class="client-area">
         <div class="container">
-            <h4>our clients</h4>
+            <h5>Our Clients</h5>
             <h2>Trusted Clients</h2>
         </div>
         <div class="special-slider">
@@ -339,7 +341,7 @@
   FAQ SECTION END
   ===================== -->
 
-  <!-- ===============
+    <!-- ===============
     DIFFERENCE AREA START 
     =====================-->
 
@@ -389,7 +391,7 @@
      ===================== -->
 
 
-      <!-- ======================
+    <!-- ======================
       FOOTER SECTION START
       ================== -->
 
@@ -403,7 +405,7 @@
                 </div>
                 <div class="col-xl-8 col-lg-8 col-md-8 col-12 content">
                     <div class="bigleap-cnt">
-                        <h4>Let's Starts from a 'Hi'</h4>
+                        <h2>Let's Starts from a 'Hi'</h2>
                     </div>
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-4 col-6">
@@ -441,6 +443,18 @@
                     </div>
                     <!-- </div> -->
                 </div>
+
+                <div class="col-xl-12">
+                    <div class="footer-bottom">
+                        <ul class="footer-copy-right">
+                            <li> Bigleap © 2025. All Rights Reserved. <a href="https://www.bigleap.ae/"> bigleap.ae </a>
+                            </li>
+                            <li> <a href="#"> Privacy Policy </a> </li>
+                        </ul>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </section>
