--- a/service.html
+++ b/service.html
@@ -38,42 +38,37 @@
 
 <body>
 
-    <!-- ===============
- HEADER SECTION START
- ================== -->
-    <section class="header-area">
-        <div class="container">
-            <h1>Our Creativity Begins Where Reality Ends</h1>
-        </div>
-    </section>
-    <!-- ====================
-  HEADER SECTION END
-  ================ -->
+
 
     <!-- ================
- SERVICE HEADER START
+ SERVICE MAIN START
  ===================== -->
-    <section class="service-header-area">
+    <section class="service-main-area">
         <div class="container">
-            <div class="row align-items-center service-box">
-                <div class="col-xl-4 col-md-6 col-12">
+            <div class="row service-box">
+                <div class="col-xl-3 col-lg-4 col-md-12 col-12">
                     <div class="image">
-                        <img src="/img/service/Comic book style image_ a man working on a laptop while siting on a wooden chair.png"
+                        <img src="/img/services/Comic book style image_ a man working on a laptop while siting on a wooden chair.png"
                             alt="">
                     </div>
                 </div>
-                <div class="col-xl-8 col-md-6 col-12">
+                <div class="col-xl-6 col-lg-8 col-md-12 col-12">
                     <div class="content">
-                        <h4>A creative studio specializing in the production of captivating animation videos that bring
+                        <h4>A creative studio specializing in the production of captivating animation videos that
+                            bring
                             ideas to life.</h4>
-                        <p>Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+                        <p>Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                            enim
                             ad
-                            minim.Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-                            enim ad minim.Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                            minim.Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+                            aliqua. Ut
+                            enim ad minim.Adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            magna
                             aliqua. Ut enim ad minim.Adipiscing elit, sed do eiusmod tempor incididunt
                             Ut labore et dolore magna aliqua. Adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore et
-                            dolore magna aliqua. Ut enim ad minim.Adipiscing elit, sed do eiusmod tempor incididunt ut
+                            dolore magna aliqua. Ut enim ad minim.Adipiscing elit, sed do eiusmod tempor incididunt
+                            ut
                             labore et dolore magna aliqua. Ut enim ad minim.Adipiscing elit, sed do eiusmod tempor
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim.Adipiscing elit, sed do
                             eiusmod
@@ -81,11 +76,12 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
 
     <!-- =========================
-  SERVICE HEADER END
+  SERVICE MAIN END
   ========================== -->
 
 
@@ -99,64 +95,64 @@
             <div class="row services-items">
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/2D Animation.png" alt="">
+                        <img src="/img/services/2D Animation.png" alt="">
                         <h6>2D Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/3D Animation.png" alt="">
-                         <h6>3D Animation</h6>
+                        <img src="/img/services/3D Animation.png" alt="">
+                        <h6>3D Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/Whiteboard Animation.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/Whiteboard Animation.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/Motion Graphics.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/Motion Graphics.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/VFX & Post Production.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/VFX & Post Production.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/red machine Product Animation.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/red machine Product Animation.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/Character Design & Rigging.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/Character Design & Rigging.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/Storyboarding & Pre-Production.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/Storyboarding & Pre-Production.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
                 <div class="col-xl-4 col-12">
                     <div class="image">
-                        <img src="/img/service/Video Editing & Post Production.png" alt="">
-                         <h6>2d Animation</h6>
+                        <img src="/img/services/Video Editing & Post Production.png" alt="">
+                        <h6>2d Animation</h6>
                         <a href="">Learn More</a>
                     </div>
                 </div>
@@ -167,12 +163,12 @@
     <!-- ==================
     SERVICE PROVIDE SECTION END -->
 
-        <!-- =======================
+    <!-- =======================
   CLIENT AREA START
   ========================== -->
     <section class="client-area">
         <div class="container">
-            <h4>our clients</h4>
+            <h5>our clients</h5>
             <h2>Trusted Clients</h2>
         </div>
         <div class="special-slider">
@@ -241,7 +237,7 @@
                 </div>
                 <div class="col-xl-8 col-lg-8 col-md-8 col-12 content">
                     <div class="bigleap-cnt">
-                        <h4>Let's Starts from a 'Hi'</h4>
+                        <h2>Let's Starts from a 'Hi'</h2>
                     </div>
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-4 col-6">
@@ -279,6 +275,17 @@
                     </div>
                     <!-- </div> -->
                 </div>
+
+                <div class="col-xl-12">
+                    <div class="footer-bottom">
+                        <ul class="footer-copy-right">
+                            <li> Bigleap © 2025. All Rights Reserved. <a href="https://www.bigleap.ae/"> bigleap.ae </a>
+                            </li>
+                            <li> <a href="#"> Privacy Policy </a> </li>
+                        </ul>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
