--- a/index.html
+++ b/index.html
@@ -166,7 +166,62 @@
             SPECIALIZED SECTION END
         ============================== -->
 
+    <!-- ========================
+ WATCH SECTION START
+  ====================-->
 
+    <section class="watch-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-6 col-lg-12 col-12">
+                    <div class="first-video">
+                        <div class="video1">
+                            <video autoplay muted loop>
+                                <source src="/img/videos/SeekoExp_V02.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <div class="video2">
+                            <video autoplay muted loop>
+                                <source src="/img/videos/JackIntro_V05.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-12 col-12">
+                    <div class="second-video">
+                        <div class="content">
+                            <h6> Our Portfolio</h6>
+                            <h2>Lorem ipsum </h2>
+                            <div class="special-btn-box btn">
+                                <a href="">WATCH MORE</a>
+
+                            </div>
+                        </div>
+
+
+                        <div class="video3">
+                            <video autoplay muted loop>
+                                <source src="/img/videos/BIAX 2222_V04_ENG.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ======================
+   WATCH SECTION END -->
+
+    <!-- =================
+    YES VIDEO SECTION START
+    ===================== -->
+    <section class="yes-video-area">
+
+    </section>
+    <!-- =================
+    YES VIDEO SECTION END
+    ===================== -->
 
     <!-- ==========================
             COUNTER SECTION START
