index-page-updated

--- a/index.html
+++ b/index.html
@@ -176,14 +176,23 @@
                 <div class="col-xl-6 col-lg-12 col-12">
                     <div class="first-video">
                         <div class="video1">
-                            <video autoplay muted loop>
+                            <!-- <video autoplay muted loop>
                                 <source src="/img/videos/SeekoExp_V02.mp4" type="video/mp4">
-                            </video>
+                            </video> -->
+                            <iframe 
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+
                         </div>
                         <div class="video2">
-                            <video autoplay muted loop>
-                                <source src="/img/videos/JackIntro_V05.mp4" type="video/mp4">
-                            </video>
+                            <iframe 
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+
                         </div>
                     </div>
                 </div>
@@ -200,9 +209,12 @@
 
 
                         <div class="video3">
-                            <video autoplay muted loop>
-                                <source src="/img/videos/BIAX 2222_V04_ENG.mp4" type="video/mp4">
-                            </video>
+                            <iframe 
+                                src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                            </iframe>
+
                         </div>
                     </div>
 
@@ -213,15 +225,7 @@
     <!-- ======================
    WATCH SECTION END -->
 
-    <!-- =================
-    YES VIDEO SECTION START
-    ===================== -->
-    <section class="yes-video-area">
 
-    </section>
-    <!-- =================
-    YES VIDEO SECTION END
-    ===================== -->
 
     <!-- ==========================
             COUNTER SECTION START
@@ -250,6 +254,72 @@
     <!-- ==========================
             COUNTER SECTION END
         ========================== -->
+
+    <!-- =================
+    YES VIDEO SECTION START
+    ===================== -->
+    <section class="bigleap-video-area">
+        <div class="container">
+            <div class="swiper bigleap">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="content">
+                            <h6>Key Projects</h6>
+                            <h2>Lorem ipsum dolor sit amet </h2>
+                            <p>Take a deep dive into some of our favorite projects. From established corporations to
+                                startups gearing to launch, we’ve seen a lot of our partners win – and we're excited to
+                                see you thrive too.</p>
+                        </div>
+                        <div class="videos">
+
+
+                            <iframe
+                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                allowfullscreen style="pointer-events: none;">
+                            </iframe>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="content">
+                            <h6>Key Projects</h6>
+                            <h2>Lorem ipsum dolor sit amet </h2>
+                        </div>
+                        <div class="videos">
+
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                allowfullscreen style="pointer-events: none;">
+                            </iframe>
+
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="content">
+                            <h6>Key Projects</h6>
+                            <h2>Lorem ipsum dolor sit amet </h2>
+                        </div>
+                        <div class="videos">
+
+                            <iframe width="560" height="315"
+                                src="https://www.youtube.com/embed/Li2mhnCfPlY?autoplay=1&mute=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0"
+                                title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
+                                allowfullscreen style="pointer-events: none;">
+                            </iframe>
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <!-- =================
+    YES VIDEO SECTION END
+    ===================== -->
 
     <!--==================================
            MOTION GRAPHICS SECTION START
@@ -555,6 +625,7 @@
     <script defer type="text/javascript" src="./js/specialized.js"></script>
     <script defer type="text/javascript" src="./js/motion.js"></script>
     <script defer type="text/javascript" src="./js/clients.js"></script>
+    <script defer type="text/javascript" src="./js/bigleap.js"></script>
     <!-- Counter -->
     <!-- ==========================
             SCRIPT SECTION END
