--- a/about.html
+++ b/about.html
@@ -177,35 +177,90 @@
     <section class="team-area">
         <div class="container">
             <h2>Meet The Creative Team</h2>
-            <div class="row align-items-center team-member">
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/gokul.jpg" alt="">
+            <div class="row grid">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/gokul.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Creative Director</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Gokul Nandhan</h6>
+                        <p>Creative Director</p>
+                    </div>
+
+                </div>
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                   <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/basil.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Generalist</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Basil</h6>
+                        <p>Generalist</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/basil.jpg" alt="">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/iyas.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Senior Designe</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Iyas Ali</h6>
+                        <p>Senior Designer</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/iyas.jpg" alt="">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/anu.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Animator</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Anu</h6>
+                        <p>Animator</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/anu.jpg" alt="">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/sreerag.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Video Editor</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Sreerag</h6>
+                        <p>Video Editor</p>
                     </div>
                 </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/sreerag.jpg" alt="">
-                    </div>
-                </div>
-                <div class="col-xl-4 col-lg-4 col-md-4 col-12">
-                    <div class="teams">
-                        <img src="/img/about/team/hadi.jpg" alt="">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="content">
+                        <figure class="effect-selena">
+                            <img src="/img/about/team/hadi.jpg" alt="img10" />
+                            <figcaption>
+                                <div class="list">
+                                    <p>Graphic Designer</p>
+                                </div>
+                            </figcaption>
+                        </figure>
+                        <h6>Hadi</h6>
+                        <p>Graphic Designer</p>
                     </div>
                 </div>
             </div>
@@ -278,7 +333,7 @@
     <!-- ===================
  FAQ SECTION START
  ===================== -->
-    <section class="faq-area">
+    <!-- <section class="faq-area">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-4">
@@ -336,7 +391,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
     <!-- =====================
   FAQ SECTION END
   ===================== -->
