--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <!-- <video autoplay muted loop>
                                 <source src="/img/videos/SeekoExp_V02.mp4" type="video/mp4">
                             </video> -->
-                            <iframe 
+                            <iframe
                                 src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
                                 title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -187,7 +187,7 @@
 
                         </div>
                         <div class="video2">
-                            <iframe 
+                            <iframe
                                 src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
                                 title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -209,7 +209,7 @@
 
 
                         <div class="video3">
-                            <iframe 
+                            <iframe
                                 src="https://www.youtube.com/embed/xiW4HMDR1eo?autoplay=1&mute=1&loop=1&controls=0&disablekb=1&modestbranding=1&rel=0&showinfo=0&playlist=xiW4HMDR1eo"
                                 title="YouTube video player" frameborder="0" allow="autoplay; encrypted-media"
                                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
@@ -421,8 +421,14 @@
         ===================================-->
 
 
+
+
+        
+
+
+
     <!-- =======================
-             CLIENT AREA START
+                     CLIENT AREA START
         ========================== -->
     <section class="client-area">
         <div class="container">
@@ -492,7 +498,8 @@
         <div class="container">
             <div class="contents">
                 <h2>The difference we bring</h2>
-                <h6> At Big Leap, from scribble to motion, we don’t just animate, we bring life to <br>
+                <h6> At Big Leap, from scribble to motion, we don’t just animate, we bring life
+                    to <br>
                     narratives that create an impact. </h6>
             </div>
 
@@ -500,28 +507,33 @@
                 <div class="col-xl-3 col-lg-6 col-md-6 col-12">
                     <div class="difference">
                         <h5>Dynamic Team</h5>
-                        <p> A dynamic team of experienced animators providing customized services to make your brand
+                        <p> A dynamic team of experienced animators providing customized
+                            services to make your brand
                             stand out.</p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-12">
                     <div class="difference">
                         <h5>Animation, VFX and more..</h5>
-                        <p> Variety of animation services at your disposal 2D&3D animation videos, VFX, product
-                            explanatory videos, corporate videos, client testimonials and many more. </p>
+                        <p> Variety of animation services at your disposal 2D&3D animation
+                            videos, VFX, product
+                            explanatory videos, corporate videos, client testimonials and many
+                            more. </p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-12">
                     <div class="difference">
                         <h5>Custom solutions across industries</h5>
-                        <p> We provide custom animation services across a wide range of industries including education,
+                        <p> We provide custom animation services across a wide range of
+                            industries including education,
                             healthcare, marketing and many more.</p>
                     </div>
                 </div>
                 <div class="col-xl-3 col-lg-6 col-md-6 col-12">
                     <div class="difference">
                         <h5>Quality services</h5>
-                        <p> Quality services that exceed the client’s expectations with a fast turnaround time.</p>
+                        <p> Quality services that exceed the client’s expectations with a fast
+                            turnaround time.</p>
                     </div>
                 </div>
             </div>
