--- a/blogs.html
+++ b/blogs.html
@@ -55,6 +55,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -73,6 +74,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -91,6 +93,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -110,6 +113,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -128,6 +132,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -146,6 +151,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -164,6 +170,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -182,6 +189,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -200,6 +208,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
@@ -218,6 +227,7 @@
                                 <a href="#">View more</a>
                             </figcaption>
                         </figure>
+                        <h4>Blog title</h4>
                         <div class="special-btn-box btn">
                             <a href="">LEARN MORE</a>
 
