--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <!-- Favicon -->
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--// bootstrap -->
 
 
@@ -421,12 +423,6 @@
         ===================================-->
 
 
-
-
-        
-
-
-
     <!-- =======================
                      CLIENT AREA START
         ========================== -->
@@ -543,7 +539,77 @@
      DIFFERENCE AREA END
      ===================== -->
 
+    <!-- ENQUIRY SECTION START -->
 
+    <section class="enquiry-area">
+        <div class="enquire-bg">
+            <img src="/img/enquiry/enquiry.jpeg" alt="">
+            <div class="special-btn-box btn">
+                <a href="" data-toggle="modal" data-target="#exampleModalCenter">CLICK HERE</a>
+
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-width modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">ENQUIRE NOW</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="name" placeholder="Name">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="phone" placeholder="phone">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="email" name="email" placeholder="Email">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="Message" placeholder="Message">
+
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer foot">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">DONE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+
+    <!-- ENQUIRY SECTION END -->
 
 
 
@@ -623,6 +689,19 @@
     <!-- ==========================
             SCRIPT SECTION START
         ========================== -->
+    <!-- modal -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script> -->
+    <!-- modal -->
+    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <script defer type="text/javascript"
