--- a/about.html
+++ b/about.html
@@ -333,7 +333,7 @@
     <!-- ===================
  FAQ SECTION START
  ===================== -->
-    <!-- <section class="faq-area">
+     <section class="faq-area">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-xl-4">
@@ -391,7 +391,7 @@
             </div>
 
         </div>
-    </section> -->
+    </section> 
     <!-- =====================
   FAQ SECTION END
   ===================== -->
