--- a/index.html
+++ b/index.html
@@ -539,6 +539,144 @@
      DIFFERENCE AREA END
      ===================== -->
 
+    <!-- ===================
+ FAQ SECTION START
+ ===================== -->
+    <section class="faq-area">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-4">
+                    <h2>Frequently Asked Questions</h2>
+                </div>
+                <div class="col-xl-8">
+                    <div class="faq-box">
+                        <div id="accordion">
+                            <div class="accordion">
+                                <input type="radio" name="radacc" class="accordian-chk" checked />
+                                <h3 class="accordian-header active">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+                                    <span class="acc-icon"></span>
+                                </h3>
+                                <div class="accordian-content" tabindex="2">
+                                    <p>
+                                        Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+                                        ut neque.
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="accordion">
+                                <input type="radio" name="radacc" class="accordian-chk" />
+                                <h3 class="accordian-header">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+                                    <span class="acc-icon"></span>
+                                </h3>
+                                <div class="accordian-content">
+                                    <p>
+                                        Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                                        purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+                                        velit, faucibus interdum
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="accordion">
+                                <input type="radio" name="radacc" class="accordian-chk" />
+                                <h3 class="accordian-header">
+                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
+                                    <span class="acc-icon"></span>
+                                </h3>
+                                <div class="accordian-content">
+                                    <p>
+                                        Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+                                        purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- =====================
+  FAQ SECTION END
+  ===================== -->
+  
+    <!-- LATEST BLOGS SECTION START -->
+    <section class="blogs-area">
+        <div class="container">
+            <h2>Blogs</h2>
+            <div class="row grid">
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/2D Animation.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h6>Blog title</h6>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/3D Animation.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h6>Blog title</h6>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-lg-6 col-md-12 col-12">
+                    <div class="contents">
+                        <figure class="effect-lily">
+                            <img src="/img/blogs/Character Design & Rigging.png" alt="img12" />
+                            <figcaption>
+                                <div class="lists">
+                                    <!-- <h2>Nice <span>Lily</span></h2> -->
+                                    <p>BLOG NAME</p>
+                                </div>
+                                <a href="#">View more</a>
+                            </figcaption>
+                        </figure>
+                        <h6>Blog title</h6>
+                        <div class="special-btn-box btn">
+                            <a href="">LEARN MORE</a>
+
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </div>
+    </section>
+    <!-- LATEST BLOGS SECTION END -->
+
+
     <!-- ENQUIRY SECTION START -->
 
     <section class="enquiry-area">
@@ -605,13 +743,9 @@
             </div>
         </div>
 
-
-
     </section>
 
     <!-- ENQUIRY SECTION END -->
-
-
 
 
     <!-- ======================
