--- a/service.html
+++ b/service.html
@@ -35,6 +35,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <!--// bootstrap -->
 </head>
 
@@ -403,6 +406,78 @@
         INDUSTRIES SECTION END
         ===================== -->
 
+
+         <!-- ENQUIRY SECTION START -->
+
+    <section class="enquiry-area">
+        <div class="enquire-bg">
+            <img src="/img/enquiry/enquiry.jpeg" alt="">
+            <div class="special-btn-box btn">
+                <a href="" data-toggle="modal" data-target="#exampleModalCenter">CLICK HERE</a>
+
+            </div>
+        </div>
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-width modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">ENQUIRE NOW</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="name" placeholder="Name">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-6 col-lg-6 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="phone" placeholder="phone">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="email" name="email" placeholder="Email">
+
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="col-xl-12 col-lg-12 col-md-12 col-12 ">
+                                <div class="inputt">
+                                    <form>
+                                        <input type="text" name="Message" placeholder="Message">
+
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer foot">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">DONE</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+    </section>
+
+    <!-- ENQUIRY SECTION END -->
     <!-- ======================
       FOOTER SECTION START
       ================== -->
@@ -485,6 +560,10 @@
     <!-- modal -->
     <script defer type="text/javascript"
         src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+   
     <!-- modal -->
 
     <!-- Counter -->
